--- a/Lesson3/homework3.html
+++ b/Lesson3/homework3.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   <center><h1>Welcome to Codingal</h1>
- <h2>In the Codingal coding champion course of 6 months </h2></center>
+   <u><center><h1>Welcome to Codingal</h1>
+ <h2>Codingal coding champion</h2></center></u>
  <hr>
  <h3># The course includes:</h3>
  <table border="2">
@@ -57,6 +57,7 @@
         <td>Python Programmer Certificate</td>
     </tr>
  </table>
+ <h3># Duration : 6 Months</h3>
  <h3># In the Tuesday and Thursday 10:00 pm Batch</h3>
  <i>TEACHER : Ankush Gupta</i>
  <br>
