--- a/Lesson5/activity1.html
+++ b/Lesson5/activity1.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section>
-            <h2 class="home">Welcome to Codingal</h2>
+            <h2 id="home">Welcome to Codingal</h2>
             <br>
             <p>Codingal offers various specialised coding courses from children of k-12. We also provide STEM accredited certificates for future use</p>
            <article>
@@ -44,7 +44,7 @@
            </article> 
         </section>
         <section>
-            <h2 class="academics">Codingal in Academics</h2>
+            <h2 id="academics">Codingal in Academics</h2>
             <br>
             <p>Codingal alos offers maths classes for students of 1-12. Lets learn algebra, geometry, trigonometry, probability, statistics, etc. much more topics with codingal  very easily through intersting approaches. </p>
             <article>
@@ -85,7 +85,7 @@
             </article>
         </section>
         <section>
-            <h2 class="about-us">Building the world’s largest & most loved coding school for kids & teens</h2>
+            <h2 id="about-us">Building the world’s largest & most loved coding school for kids & teens</h2>
             <br>
             <p>Codingal started with a dream to inspire school kids to fall in love with coding and to empower every child to build anything they can imagine</p>
             <br>
@@ -93,7 +93,7 @@
             <p>Vivek Prakash & Satyam Baranwal</p>
         </section>
         <section>
-            <h2 class="contact-us">Contact Us</h2>
+            <h2 id="contact-us">Contact Us</h2>
             <br>
             <p>E-mail: codingal@outlook.com</p>
         </section>
