--- a/Lesson6/activity1.html
+++ b/Lesson6/activity1.html
@@ -15,9 +15,11 @@
     <label for="age">Age</label>
     <input type="number" name="age">
     <br>
+    <fieldset>
     <label for="gender">Gender</label>
     <input type="radio" name="gender" id="male" value="male">Male
     <input type="radio" name="gender" id="female" value="female">Female
+</fieldset>
     <br>
     <label for="dob">Date of Birth</label>
     <input type="date" name="dob">
@@ -25,6 +27,7 @@
     <label for="email">E-mail</label>
     <input type="email" name="email">
     <br>
+    <fieldset>
     <label for="sub">Subjects:</label>
     <br>
     <input type="checkbox" name="sub" value="Maths">Maths
@@ -40,10 +43,12 @@
     <input type="checkbox" name="sub" value="Comp">Computers
     <br>
     <input type="checkbox" name="sub" value="P.Ed">Physical Education
+</fieldset>
     <br>
     <label for="city">City</label>
     <input type="text" name="city">
     <br>
+    <fieldset>
     <label for="state">State</label>
     <select name="state">
         <option selected value="none">None</option>
@@ -59,6 +64,7 @@
         <option value="BR">Bihar</option>
         <option value="RJ">Rajasthan</option>
     </select>
+</fieldset>
     <br>
     <input type="submit">
     <input type="reset">
