--- a/Lesson9/activity1.html
+++ b/Lesson9/activity1.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            background-color: lavender;
+        }
         .main-p{
-            color:blue;
+            color:black;
             font-size: 40px;
             text-transform:small-caps;
-            text-decoration: underline wavy;
+            text-decoration: underline dashed;
+            text-shadow: 2px 2px 1px gray ;
         }
         .main-box{
-            background-color: beige;
-            box-shadow: 3px 2px 2px gray;
+            background-color:beige;
+            box-shadow: 3px 3px 1px gray;
         }
         .content{
             color:brown;
             text-indent: 30px;
-            transform: skewX(30);
+            transform: skewX(-30deg);
         }
     </style>
 </head>
