--- a/Lesson21/activity1.html
+++ b/Lesson21/activity1.html
@@ -71,7 +71,7 @@
                 console.log("October");
                 break
             case 11:
-                consol.log("November");
+                console.log("November");
                 break
             case 12:
                 console.log("December");
