--- a/Lesson30/Finalproject.html
+++ b/Lesson30/Finalproject.html
@@ -1,47 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
-    <link rel="stylesheet" href="Finalproject.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project</title>
+  <link rel="stylesheet" href="Finalproject.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
+
 <body>
-    <header class="bg-dark text-white">
-        <nav class="nav-style">
-            <img src="https://i.pinimg.com/736x/4d/15/5c/4d155c6f7e5b1c6942059703c403ecaf.jpg" alt="logo" class="logo">
-            <ul>
-                <li><a href="">About us</a></li>
-                <li><a href="">Support Us</a></li>
-                <li><a href="">Courses</a></li>
-                <li><a href="">Contact us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-r91n54fqny9hlmrk.jpg" class="d-block w-100" alt="...">
+  <header class="bg-dark text-white">
+    <nav class="nav-style">
+      <img src="https://i.pinimg.com/736x/4d/15/5c/4d155c6f7e5b1c6942059703c403ecaf.jpg" alt="logo" class="logo">
+      <ul>
+        <li><a href="">About us</a></li>
+        <li><a href="">Support Us</a></li>
+        <li><a href="">Courses</a></li>
+        <li><a href="">Contact us</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-r91n54fqny9hlmrk.jpg" class="d-block w-100"
+          alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-uxxijj0oa4s9xh25.jpg" class="d-block w-100"
+          alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-57rsi2a6uqxerq4i.jpg" class="d-block w-100"
+          alt="...">
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-uxxijj0oa4s9xh25.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-57rsi2a6uqxerq4i.jpg" class="d-block w-100" alt="...">
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
+  <section class="bg-dark text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-6 p-5">
+          <img src="Main.svg" alt="svg" class="main">
+        </div>
+        <div class="col-6 p-5">
+          <h1>Codingal</h1>
+          <h5>Let's fall in love with Coding</h5>
+          <p>Coding, also known as computer programming, is the process of writing instructions for computers to follow
+            in order to perform specific tasks. It involves using programming languages to create software, websites,
+            and applications. Essentially, it's how we communicate with computers and tell them what to do</p>
+          <button class="btn btn-outline-warning">Contact us</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <section class="bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col-4 p-5">
+          <div class="card ">
+            <img class="card-img-top" src="Card1.jpg" style="width: 220px; height: 200px;">
+            <div class="card-body">
+              <div class="card-title">Web Development</div>
+              <div class="card-text">Web development is the process of creating, building, and maintaining websites and
+                web applications for the Internet or an intranet. It encompasses a wide range of tasks, from designing
+                the visual layout and user interface to writing the underlying code and managing databases.</div>
+              <button class="btn btn-warning">Check Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-4 p-5">
+          <div class="card">
+            <img class="card-img-top" src="Card2.jpg" style="width: 220px; height: 200px;">
+            <div class="card-body">
+              <div class="card-title">Python</div>
+              <div class="card-text">Python is a high-level, interpreted, general-purpose programming language created
+                by Guido van Rossum and first released in 1991. It is known for its clear and readable syntax, which
+                emphasizes code readability and allows developers to write programs with fewer lines of code compared to
+                some other languages.</div>
+              <button class="btn btn-warning">Check Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-4 p-5">
+          <div class="card">
+            <img class="card-img-top" src="Card3.jpg" style="width: 220px; height: 200px;">
+            <div class="card-body">
+              <div class="card-title">Machine Learning</div>
+              <div class="card-text">Machine learning (ML) is a field of computer science focused on enabling systems to
+                learn from data and improve their performance without explicit programming. It's a subset of artificial
+                intelligence (AI) where algorithms analyze data, identify patterns, and make predictions or decisions.
+                Essentially, ML allows machines to learn from experience, becoming more accurate and efficient over time
+                as they are exposed to more data. </div>
+              <button class="btn btn-warning">Check Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
