--- a/Lesson30/Finalproject.html
+++ b/Lesson30/Finalproject.html
@@ -87,10 +87,9 @@
             <img class="card-img-top" src="Card2.jpg" style="width: 220px; height: 200px;">
             <div class="card-body">
               <div class="card-title">Python</div>
-              <div class="card-text">Python is a high-level, interpreted, general-purpose programming language created
+              <div class="card-text">It is a high-level, interpreted, general-purpose programming language created
                 by Guido van Rossum and first released in 1991. It is known for its clear and readable syntax, which
-                emphasizes code readability and allows developers to write programs with fewer lines of code compared to
-                some other languages.</div>
+                emphasizes code readability and allows developers to write programs with fewer lines of code.</div>
               <button class="btn btn-warning">Check Now</button>
             </div>
           </div>
@@ -102,9 +101,7 @@
               <div class="card-title">Machine Learning</div>
               <div class="card-text">Machine learning (ML) is a field of computer science focused on enabling systems to
                 learn from data and improve their performance without explicit programming. It's a subset of artificial
-                intelligence (AI) where algorithms analyze data, identify patterns, and make predictions or decisions.
-                Essentially, ML allows machines to learn from experience, becoming more accurate and efficient over time
-                as they are exposed to more data. </div>
+                intelligence (AI) where algorithms analyze data, identify patterns, and make predictions. </div>
               <button class="btn btn-warning">Check Now</button>
             </div>
           </div>
