--- a/Lesson30/Finalproject.html
+++ b/Lesson30/Finalproject.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="Finalproject.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -109,6 +110,26 @@
       </div>
     </div>
   </section>
+  <footer class="bg-dark text-white">
+    <div class="container p-5">
+      <h6 class="text-warning">Social media</h6>
+      <h4>Let's be friends</h4>
+      <div class="row">
+        <div class="col-3">
+          <a href="#" class="btn btn-outline-warning">Instagram <i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="col-3">
+          <a href="#" class="btn btn-outline-warning">Youtube <i class="fa-brands fa-youtube"></i></a>
+        </div>
+        <div class="col-3">
+          <a href="#" class="btn btn-outline-warning">Twitter <i class="fa-brands fa-x-twitter"></i></a>
+        </div>
+        <div class="col-3">
+          <a href="#" class="btn btn-outline-warning">Email <i class="fa-solid fa-envelope"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
