--- a/MyWebsite/main.html
+++ b/MyWebsite/main.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
         <nav class="nav-bar">
-            <img src="" alt="logo">
-            <input type="text" placeholder="Search..." class="search border-danger rounded" size="40" >
-            <ul>
+            <img src="Logo.webp" alt="logo" class="logo">
+            <input type="text" placeholder="  Search..." class="search border-danger rounded" size="30">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="fa-brands fa-envelope navbar-toggler-icon"></span>
+            </button>
+            <ul class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <li><a href="">Home</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Support & Contact</a></li>
@@ -25,16 +32,13 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="Caraousel-1.webp"
-                    class="d-block w-100" alt="...">
+                <img src="Caraousel-1.webp" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="Caraousel-2.jpeg"
-                    class="d-block w-100" alt="...">
+                <img src="Caraousel-2.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://wallpapers.com/images/hd/1920x1080-hd-coding-57rsi2a6uqxerq4i.jpg"
-                    class="d-block w-100" alt="...">
+                <img src="Caraousel-3.webp" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -52,7 +56,7 @@
 
 
 
-
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
