--- a/MyWebsite/main.html
+++ b/MyWebsite/main.html
@@ -13,16 +13,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="main">
     <header>
         <nav class="nav-bar">
             <img src="Logo.webp" alt="logo" class="logo">
             <input type="text" placeholder="  Search..." class="search border-danger rounded" size="30">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+            <!--<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa-brands fa-envelope navbar-toggler-icon"></span>
-            </button>
-            <ul class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            </button>-->
+            <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About Us</a></li>
                 <li><a href="">Support & Contact</a></li>
@@ -52,7 +52,39 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
+    <br>
+<section>
+        <div class="row cards">
+    <div class="card col">
+        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
+        <div class="card-body">
+        <h4 class="card-title">DRESSES</h4>
+        <p class="card-text">Go and dive in some amazing options of dresses from our new arrivals </p>
+        </div>
+    </div>
+    <div class="card col">
+        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
+        <div class="card-body">
+        <h4 class="card-title">FORMALS</h4>
+        <p class="card-text">Go and dive in some amazing options of formals from our new arrivals </p>
+        </div>
+    </div>
+    <div class="card col">
+        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
+        <div class="card-body">
+        <h4 class="card-title">CASUALS</h4>
+        <p class="card-text">Go and dive in some amazing options of casuals from our new arrivals </p>
+        </div>
+    </div>
+    <div class="card col">
+        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
+        <div class="card-body">
+        <h4 class="card-title">ETHNIC</h4>
+        <p class="card-text">Go and dive in some amazing options of ethnic from our new arrivals </p>
+        </div>
+    </div>
+    </div>
+</section>
 
 
 
