--- a/MyWebsite/main.html
+++ b/MyWebsite/main.html
@@ -53,38 +53,42 @@
         </button>
     </div>
     <br>
-<section>
+    <section>
         <div class="row cards">
-    <div class="card col">
-        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
-        <div class="card-body">
-        <h4 class="card-title">DRESSES</h4>
-        <p class="card-text">Go and dive in some amazing options of dresses from our new arrivals </p>
+            <div class="card col image">
+                <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top"
+                    height="320px">
+                <div class="card-body">
+                    <h4 class="card-title">DRESSES</h4>
+                    <p class="card-text">Go and dive in some amazing options of dresses from our new arrivals </p>
+                </div>
+            </div>
+            <div class="card col image">
+                <img src="https://assets.myntassets.com/w_412,q_30,dpr_3,fl_progressive,f_webp/assets/images/13828288/2021/3/19/7ef08f4f-03e0-4871-8c2a-9206e505fcd21616138653279-INVICTUS-Men-Shirts-8811616138652407-1.jpg"
+                    alt="img" class="card-img-top" height="320px">
+                <div class="card-body">
+                    <h4 class="card-title">FORMALS</h4>
+                    <p class="card-text">Go and dive in some amazing options of formals from our new arrivals </p>
+                </div>
+            </div>
+            <div class="card col image">
+                <img src="https://i.pinimg.com/474x/36/92/1d/36921d5ed215368fad64d52797f3aaee.jpg" alt="img"
+                    class="card-img-top" height="320px">
+                <div class="card-body">
+                    <h4 class="card-title">CASUALS</h4>
+                    <p class="card-text">Go and dive in some amazing options of casuals from our new arrivals </p>
+                </div>
+            </div>
+            <div class="card col image">
+                <img src="https://5.imimg.com/data5/SELLER/Default/2023/7/323164902/OR/VL/VP/15389059/whatsapp-image-2023-07-07-at-10-24-58-500x500.jpeg"
+                    alt="img" class="card-img-top">
+                <div class="card-body" height="320px">
+                    <h4 class="card-title">ETHNIC</h4>
+                    <p class="card-text">Go and dive in some amazing options of ethnic from our new arrivals </p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="card col">
-        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
-        <div class="card-body">
-        <h4 class="card-title">FORMALS</h4>
-        <p class="card-text">Go and dive in some amazing options of formals from our new arrivals </p>
-        </div>
-    </div>
-    <div class="card col">
-        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
-        <div class="card-body">
-        <h4 class="card-title">CASUALS</h4>
-        <p class="card-text">Go and dive in some amazing options of casuals from our new arrivals </p>
-        </div>
-    </div>
-    <div class="card col">
-        <img src="https://claura.in/cdn/shop/files/017A8404_1_1.jpg?v=1732947444" alt="img" class="card-img-top">
-        <div class="card-body">
-        <h4 class="card-title">ETHNIC</h4>
-        <p class="card-text">Go and dive in some amazing options of ethnic from our new arrivals </p>
-        </div>
-    </div>
-    </div>
-</section>
+    </section>
 
 
 
